# PeakRDL-PyRAL

./: .gitignore  .readthedocs.yaml  README.md
.github/workflows/: build.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/api/: hwio-base.rst  hwio-callback.rst  hwio-demo.rst  hwio-mirror.rst  hwio-mmap.rst  hwio-openocd.rst  hwio.rst  ral.rst
docs/diagrams/: diagrams.drawio
docs/ug/: grafting.rst  hier-hwio.rst  installing.rst  key-concepts.rst
pkg-exporter/: README.md  pyproject.toml
pkg-exporter/src/peakrdl_pyral/: __about__.py  __peakrdl__.py  db_generator.py  exporter.py  name_filter.py  type_stub_generator.py
pkg-runtime/: README.md  pyproject.toml
pkg-runtime/src/peakrdl_pyral_runtime/: __about__.py  dbapi.py
pkg-runtime/src/peakrdl_pyral_runtime/hwio/: __init__.py  base.py  callback.py  demo.py  mirror.py  mmap.py  openocd.py
pkg-runtime/src/peakrdl_pyral_runtime/model/: __init__.py  array.py  base.py  field.py  group.py  register.py  regvalue.py
test/: .coveragerc  pylint.rc  requirements.txt  run.sh  test_access.py  test_external_types.py  test_hwio.py  test_mirrored_hwio.py  test_name_filter.py  test_ral.py  test_regvalue.py  test_structured_hwio.py  test_version.py
test/benchmark/: .gitignore  benchmark_ral.py
test/generated_rals/: .gitignore
test/pyral_testutils/: mock_hwio.py  pyral_testcase.py
test/rdl_src/: grafted.rdl  name_collisions.rdl  soc.rdl  structural.rdl  tiny.rdl  wide_regs.rdl
